# veloquent-core

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  bfsu.toml  docker-compose.yml  veloquent.toml
entity/: Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20241012_000001_create_table_user.rs  m20241014_000002_create_table_upload.rs  m20241028_000003_create_table_contact.rs  m20241110_000004_create_table_session.rs  m20241121_000005_create_table_message.rs  m20241121_000006_create_table_feed.rs  m20241121_000007_create_table_group.rs  m20241202_000008_create_table_member.rs
src/: config.rs  error.rs  jwt.rs  main.rs  openapi.rs  param.rs  utility.rs  view.rs
src/entity/: contact.rs  feed.rs  group.rs  member.rs  message.rs  mod.rs  prelude.rs  session.rs  upload.rs  user.rs
src/view/: avatar.rs  contact.rs  download.rs  feed.rs  group.rs  history.rs  login.rs  message.rs  openapi.rs  tests.rs  user.rs  user_delete.rs  user_find.rs  user_profile.rs  user_register.rs  ws.rs
