[workspace]
members = ["migration"]

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "MIT"
publish = false
authors = ["adamanteye <yangzheh22@gmail.com>"]

[workspace.dependencies]
# Frameworks
axum = "0.7.7"
axum-extra = "0.9.4"
sea-orm = "1.0.1"
sea-orm-migration = "1.0.1"
tokio = "1.40.0"
jsonwebtoken = "9.3.0"
# Argument parsing
clap = "4.5.20"
# For sea-orm-migration
async-std = "1"
# Serialization and deserialization
serde = "1.0.210"
serde_json = "1.0.128"
toml = "0.8.19"
# Open API generator
utoipa = "4.2.3"
utoipa-swagger-ui = "6.0.0"
# Error handling
anyhow = "1.0.89"
# Log
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
# Utilities
chrono = "0.4.38"
sha2 = "0.10.8"
base16ct = "0.2.0"
once_cell = "1.20.2"
rand = "0.8.5"
regex = "1.11.0"
uuid = "1.10.0"
# With llvm-cov
coverage-helper = "0.1"

[package]
name = "veloquent-core"
description = "2024-2025秋季学期软件工程大作业: Veloquent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "with-uuid",
] }
tokio = { workspace = true, features = ["signal", "rt-multi-thread"] }
axum-extra = { workspace = true, features = ["typed-header"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
migration = { path = "migration" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive"] }
jsonwebtoken = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
base16ct = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true, features = ["v5", "fast-rng"] }

[dev-dependencies]
coverage-helper = { workspace = true }
