[workspace]
members = ["migration"]

[workspace.package]
authors = ["adamanteye <yangzheh22@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false
version = "0.2.0"

[workspace.dependencies]
# Frameworks
axum = "0.7.7"
axum-extra = "0.9.4"
jsonwebtoken = "9.3.0"
sea-orm = "1.0.1"
tokio = "1.40.0"
# Argument parsing
clap = "4.5.20"
# For sea-orm-migration
async-std = "1"
sea-orm-migration = "1.0.1"
# Serialization and deserialization
serde = "1.0.210"
serde_json = "1.0.128"
toml = "0.8.19"
# Open API generator
utoipa = "4.2.3"
utoipa-swagger-ui = "6.0.0"
# Error handling
anyhow = "1.0.89"
# Log
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
# Utilities
base16ct = "0.2.0"
chrono = "0.4.38"
dashmap = "6"
futures = "0.3"
prost = "0.12"
rand = "0.8.5"
regex = "1.11.0"
sea-query = "0.31.1"
sha2 = "0.10.8"
uuid = "1.10.0"

[package]
authors.workspace = true
description = "2024-2025秋季学期软件工程大作业: Veloquent"
edition.workspace = true
license.workspace = true
name = "veloquent-core"
publish.workspace = true
version.workspace = true

[features]
default = ["dev"]
dev = [
  "utoipa/axum_extras",
  "utoipa/chrono",
  "utoipa/uuid",
  "utoipa-swagger-ui/axum",
]
prod = []

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(coverage_nightly)']}

[dependencies]
anyhow = {workspace = true}
axum = {workspace = true, features = ["ws", "http2"]}
axum-extra = {workspace = true, features = ["typed-header", "protobuf"]}
base16ct = {workspace = true}
chrono = {workspace = true}
clap = {workspace = true, features = ["derive"]}
dashmap = {workspace = true}
futures = {workspace = true}
jsonwebtoken = {workspace = true}
migration = {path = "migration"}
prost = {workspace = true}
rand = {workspace = true}
regex = {workspace = true}
sea-orm = {workspace = true, features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "with-uuid",
  "macros",
]}
sea-query = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
sha2 = {workspace = true}
tokio = {workspace = true, features = ["signal", "rt-multi-thread"]}
toml = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
utoipa = {workspace = true, optional = true}
utoipa-swagger-ui = {workspace = true, optional = true}
uuid = {workspace = true, features = ["v5", "fast-rng"]}
